@@ -89,7 +89,6 @@ public class TextHud extends HudElement {
         .name("condition")
         .description("Condition to check when shown is not Always.")
         .visible(() -> shown.get() != Shown.Always)
-        .defaultValue("")
         .onChanged(s -> recompile())
         .renderer(StarscriptTextBoxRenderer.class)
         .build()
@@ -196,7 +195,7 @@ public class TextHud extends HudElement {
 
             if (result.hasErrors()) {
                 script = null;
-                section = new Section(0, result.errors.get(0).toString());
+                section = new Section(0, result.errors.getFirst().toString());
                 calculateSize(renderer);
             }
             else script = Compiler.compile(result);
